Create server config and requirements for docker deploy

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,11 +14,15 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "argon2-cffi>=23.1.0",
-    "django>=5.1.7",
-    "praw>=7.8.1",
     "ruff>=0.11.0",
 ]
 mypy = [
     "types-requests>=2.32.0.20250306",
+]
+server = [
+    "argon2-cffi>=23.1.0",
+    "django>=5.1.7",
+    "django-environ>=0.12.0",
+    "gunicorn>=23.0.0",
+    "psycopg>=3.2.6",
 ]
