--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "Leaderboard",
-    "package": "41708974",
-    "ankiweb_id": "41708974",
-    "author": "Thore Tyborski",
-    "homepage": "https://github.com/ThoreBor/Anki_Leaderboard"
+    "name": "Anki Leaderboard",
+    "package": "TODO",
+    "ankiweb_id": "TODO",
+    "author": "Chris and Eva",
+    "homepage": "TODO"
 }
