Add docker config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,5 +24,6 @@ server = [
     "django>=5.1.7",
     "django-environ>=0.12.0",
     "gunicorn>=23.0.0",
+    "praw>=7.8.1",
     "psycopg>=3.2.6",
 ]
