--- a/.github/workflows/create-image.yml
+++ b/.github/workflows/create-image.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Log in to registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-      - name: Build and push the image
-        run : |
-          docker build . --tag ghcr.io/tuesd4y/AnkiLeaderboard:latest
-          docker push ghcr.io/tuesd4y/AnkiLeaderboard:latest
+      - name: Build image
+        run : docker build . --tag ghcr.io/tuesd4y/AnkiLeaderboard:latest
+      - name: Push image
+        run: docker push ghcr.io/tuesd4y/AnkiLeaderboard:latest
