--- a/.github/workflows/release-on-tag.yml
+++ b/.github/workflows/release-on-tag.yml
@@ -20,11 +20,19 @@ jobs:
       - name: Push image
         run: docker push ghcr.io/tuesd4y/ankileaderboard:${{ github.ref_name }}
 
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        with:
+          make_latest: true
+          generate_release_notes: true
+
   deploy:
     runs-on: ubuntu-latest
     permissions:
+      contents: 'read'
       id-token: write
     steps:
+      - uses: actions/checkout@v3
       - uses: google-github-actions/auth@v2
         with:
           workload_identity_provider: 'projects/46524967884/locations/global/workloadIdentityPools/github/providers/tuesd4y-ankileaderboard'
@@ -33,10 +41,5 @@ jobs:
       - uses: google-github-actions/deploy-cloudrun@v2
         with:
           service: 'anki-leaderboard'
+          region: 'europe-west1'
           image: 'us-central1-docker.pkg.dev/anki-leaderboard/ghcr/tuesd4y/ankileaderboard:${{ github.ref_name }}'
-
-      - name: Release
-        uses: softprops/action-gh-release@v2
-        with:
-          make_latest: true
-          generate_release_notes: true
